--- a/components/w0hq1kbmq-go/overlays/development/deployment-patch.yaml
+++ b/components/w0hq1kbmq-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: w0hq1kbmq-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-6b6352e682.243h.p3.openshiftapps.com/rhtap/rhtap-qe-go:6c1127f7c4aa1bb3b8bbea57bb72f4d8de88b91b@sha256:637f86b21cc291af903ade135520c91fb4786fd6d4fb026e7c1ea59c26ff2e09
+          name: container-image
